[metadata]
name = ironic-lib
summary = Ironic common library
description-file =
    README.rst
author = OpenStack Ironic
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    ironic_lib

[entry_points]
oslo.config.opts =
    ironic_lib.disk_partitioner = ironic_lib.disk_partitioner:list_opts
    ironic_lib.disk_utils = ironic_lib.disk_utils:list_opts
    ironic_lib.utils = ironic_lib.utils:list_opts
    ironic_lib.metrics = ironic_lib.metrics_utils:list_opts
    ironic_lib.metrics_statsd = ironic_lib.metrics_statsd:list_opts
