[metadata]
name = ironic-lib
summary = Ironic common library
description-file =
    README.rst
author = OpenStack Ironic
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/ironic-lib/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
data_files =
    etc/ironic/rootwrap.d = etc/ironic/rootwrap.d/*
packages =
    ironic_lib

[entry_points]
oslo.config.opts =
    ironic_lib.disk_partitioner = ironic_lib.disk_partitioner:list_opts
    ironic_lib.disk_utils = ironic_lib.disk_utils:list_opts
    ironic_lib.exception = ironic_lib.exception:list_opts
    ironic_lib.mdns = ironic_lib.mdns:list_opts
    ironic_lib.metrics = ironic_lib.metrics_utils:list_opts
    ironic_lib.metrics_statsd = ironic_lib.metrics_statsd:list_opts
    ironic_lib.utils = ironic_lib.utils:list_opts

[extra]
keystone =
    keystoneauth1>=4.2.0 # Apache-2.0
    os-service-types>=1.2.0  # Apache-2.0
