[metadata]
name = ironic-lib
summary = Ironic common library
description_file =
    README.rst
author = OpenStack Ironic
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/ironic-lib/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
data_files =
    etc/ironic/rootwrap.d = etc/ironic/rootwrap.d/*
packages =
    ironic_lib

[entry_points]
oslo.config.opts =
    ironic_lib.disk_partitioner = ironic_lib.disk_partitioner:list_opts
    ironic_lib.disk_utils = ironic_lib.disk_utils:list_opts
    ironic_lib.exception = ironic_lib.exception:list_opts
    ironic_lib.json_rpc = ironic_lib.json_rpc:list_opts
    ironic_lib.mdns = ironic_lib.mdns:list_opts
    ironic_lib.metrics = ironic_lib.metrics_utils:list_opts
    ironic_lib.metrics_statsd = ironic_lib.metrics_statsd:list_opts
    ironic_lib.qemu_img = ironic_lib.qemu_img:list_opts
    ironic_lib.utils = ironic_lib.utils:list_opts

[extra]
keystone =
    keystoneauth1>=4.2.0 # Apache-2.0
    os-service-types>=1.2.0  # Apache-2.0
json_rpc =
    keystoneauth1>=4.2.0 # Apache-2.0
    os-service-types>=1.2.0  # Apache-2.0
    oslo.service!=1.28.1,>=1.24.0 # Apache-2.0

[codespell]
quiet-level = 4
# Words to ignore:
# crypted: Valid in some contexts, e.g. "crypted password"
# assertIn: Python's unittest method
ignore-words-list = crypted,assertIn
